test/functions/deitz/test_return_two_derived_classes.good
test_return_two_derived_classes.chpl:13: error: unable to resolve return type
